# OpenGL30JNI

./: build.gradle  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yuv1280x720
app/src/main/assets/example10/: fragment.glsl  vertex.glsl
app/src/main/assets/example11/: fragment.glsl  vertex.glsl
app/src/main/assets/example13/: fragment.glsl  fragment2.glsl  fragment3.glsl  vertex.glsl
app/src/main/assets/example14/: screen_blur_fragment.glsl  screen_edge_detection_fragment.glsl  screen_grayscale_fragment.glsl  screen_inversion_fragment.glsl  screen_vertex.glsl
app/src/main/assets/example15/: fragment.glsl  screen_blur_fragment.glsl  screen_edge_detection_fragment.glsl  screen_fragment.glsl  screen_grayscale_fragment.glsl  screen_inversion_fragment.glsl  screen_kernel_fragment.glsl  screen_vertex.glsl
app/src/main/assets/example16/: beauty_blur_fragment.glsl  beauty_blur_vertex.glsl  blur_diff_fragment.glsl  blur_diff_vertex.glsl  blur_mix_fragment.glsl  blur_mix_vertex.glsl  camera_vertex.glsl  screen_fragment.glsl  skin_beauty_fragment.glsl  skin_beauty_vertex.glsl
app/src/main/assets/example17/: fragment.glsl  lut2d4x4_fragment.glsl  lut3d_fragment.glsl  lut4x4_fragment.glsl  lut8x8_fragment.glsl  lut_vertex.glsl
app/src/main/assets/example19/: fragment.glsl  vertex.glsl
app/src/main/assets/example21/: filter1_vertex.glsl  filter2_fragment.glsl  filter3_lut_high_fragment.glsl  filter3_lut_low_fragment.glsl  filter5_detect_skin_new_fragment.glsl  filter5_detect_skin_old_fragment.glsl
app/src/main/assets/example22/: fragment.glsl  vertex.glsl
app/src/main/assets/example23/: fragment.glsl  vertex.glsl
app/src/main/assets/example24/: 2d_arr_fragment.glsl  3d_cube_fragment.glsl  lut2x2_fragment.glsl  vertex.glsl
app/src/main/assets/example27/: fragment_bt709yuv.glsl  vertex.glsl
app/src/main/assets/example5/: fragment.glsl  vertex.glsl
app/src/main/assets/example6/: fragment.glsl  vertex.glsl
app/src/main/assets/example7/: fragment.glsl  vertex.glsl
app/src/main/assets/example8/: vertex.glsl
app/src/main/assets/example9/: fragment.glsl
app/src/main/assets/stable/: gaussian_filter_11x11_fragment.glsl  gaussian_filter_11x11_vertex.glsl  gaussian_filter_5x5_fragment.glsl  (+1 more)
app/src/main/cpp/: CMakeLists.txt  base_Log.cpp  base_Log.h  esUtils.cpp  esUtils.h  native-lib.cpp
app/src/main/cpp/example1/: GLRenderer.cpp  README.md
app/src/main/cpp/example10/: GLRenderer.cpp
app/src/main/cpp/example11/: GLRenderer.cpp
app/src/main/cpp/example13/: GLRenderer.cpp  README.md
app/src/main/cpp/example14/: GLRenderer.cpp
app/src/main/cpp/example15/: Camera.cpp  Camera.h  GLRenderer.cpp  README.md
app/src/main/cpp/example16/: GLRenderer.cpp  TextureManager.cpp  TextureManager.h
app/src/main/cpp/example16/filter/: BeautyBlurFilter.cpp  BeautyBlurFilter.h  BlurDiffFilter.cpp  BlurDiffFilter.h  BlurMixFilter.cpp  BlurMixFilter.h  CameraFilter.cpp  CameraFilter.h  ScreenFilter.cpp  ScreenFilter.h  SkinFilter.cpp  SkinFilter.h
app/src/main/cpp/example17/: GLRenderer.cpp  README.md
app/src/main/cpp/example19/: GLRenderer.cpp
app/src/main/cpp/example2/: GLRenderer.cpp
app/src/main/cpp/example3/: GLRenderer.cpp  README.md
app/src/main/cpp/example4/: GLRenderer.cpp
app/src/main/cpp/example5/: GLRenderer.cpp
app/src/main/cpp/example6/: GLRenderer.cpp  README.md
app/src/main/cpp/example7/: GLRenderer.cpp
app/src/main/cpp/example8/: GLRenderer.cpp
app/src/main/cpp/example9/: GLRenderer.cpp
app/src/main/cpp/image/: ImageUtils.cpp  ImageUtils.h  base_Image.c  base_Image.h
app/src/main/cpp/java/: AssetManager.cpp  AssetManager.h  BitmapFactory.cpp  BitmapFactory.h  BitmapFactoryOptions.cpp  BitmapFactoryOptions.h  Context.cpp  Context.h  Object.cpp  Object.h  Resources.cpp  Resources.h
freetype2/include/freetype/config/: ftoption.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+173 files in other folders)
